--- a/index.html
+++ b/index.html
@@ -8,14 +8,30 @@
     <title>Developer Quiz</title>
 </head>
 <body>
-    <main>
 
+<!-- header -->
+<main>
+<div id="header">
+    <div class="row" id="scoreBar">
+        <div class="col-4" id="viewScores">View Highscores</div>
+        <div class="col-2 h2">Time: <span id="timer">0</span></div>
+    </div>
+</div>
+
+<div class="container mt-5"></div>
+    <div class="container" id="welcome">
+        <h1>Developer Quiz</h1>
+        <p>
+            answer the follwing questions within the time limit
+        </p>
+        <button id="startQuiz">Start Quiz</button>
+
+    </div>
         <div class="game-quiz-container">
 
             <div class="game-details-container">
-                <h1>Score : <span id="player-score"></span> / 5</h1>
+                <h1>Score : <span id="player-score">0</span> / 5</h1>
                 <h1> Question : <span id="question-number"></span> / 5</h1>
-                <h1>Time : <span id="timer">0:30</span></h1>
             </div>
 
             <div class="game-question-container">
@@ -23,30 +39,10 @@
             </div>
 
             <div class="game-options-container">
-
-
-                <span>
-                    <input type="radio" id="option-one" name="option" class="radio" value="ansA" />
-                    <label for="option-one" class="option" id="option-one-label"></label>
-                </span>
-
-
-                <span>
-                    <input type="radio" id="option-two" name="option" class="radio" value="ansB" />
-                    <label for="option-two" class="option" id="option-two-label"></label>
-                </span>
-
-
-                <span>
-                    <input type="radio" id="option-three" name="option" class="radio" value="ansC" />
-                    <label for="option-three" class="option" id="option-three-label"></label>
-                </span>
-
-
-                <span>
-                    <input type="radio" id="option-four" name="option" class="radio" value="ansD" />
-                    <label for="option-four" class="option" id="option-four-label"></label>
-                </span>
+                <button id="btn1">1</button>
+                <button id="btn2">2</button>
+                <button id="btn3">3</button>
+                <button id="btn4">4</button>
 
 
             </div>
@@ -57,6 +53,10 @@
 
         </div>
     </main>
-    
+    <script
+    src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+    crossorigin="anonymous"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
