adds user interface improvements, styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="header">
     <div class="row" id="scoreBar">
         <div id="viewScores">View Highscores</div>
-        <div id="full-timer">Time: <span id="timer">0</span></div>
+        <div id="full-timer">Time:&nbsp;<span id="timer">0</span></div>
     </div>
 </div>
 
