adds abort button to quit to welcome

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
             </div>
 
-            <div class="next-button-container">
-                <button>Next Question</button>
+            <div class="abort-button-container">
+                <button id="abort-button">Abort!!</button>
             </div>
 
         </div>
