adds answer shuffling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container" id="welcome">
         <h1>Developer Quiz</h1>
         <p>
-            answer the follwing questions within the time limit
+            answer the follwing questions before your miliseconds run out for a points bonus
         </p>
         <button id="startQuiz">Start Quiz</button>
 
