adds form for submitting initals

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <button id="play-again">Play Again</button>
 </div>
 
+<div id="score-form">
+    <form>
+        <p>score: <span id='final-score-submit'>0</span></p>
+        <p>please enter your initals</p>
+        <input id="user-inital-input" type="text">
+        <button id="inital-submit">Submit</button>
+    </form>
+</div>
+
 <div id="high-scores">
     <div class="high-scores-container">
         <h1>High Scores</h1>
